# OpenHarmony-RK3568

./: README.md
gcw/A2_uart/src/: uart_test.c
gcw/A3_gpio/: BUILD.gn  bundle.json
gcw/A3_gpio/src/: gpio_test.c
