import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

print("gcw  gpio_test BUILD.gn file")
ohos_executable("A3_gcwgpio") {
  sources = [ "src/gpio_test.c" ]
  include_dirs = [
    "include",                                     //尝试备注  这里将drivers下的头文件复制到这进行编译
    "//drivers/hdf_core/framework/include/platform",     //gpio_if.h
    "//third_party/bounds_checking_function/include",     //secure.h
  ]

  deps = []

  external_deps = [               //依赖外部的部件      格式  部件：共享库
    "c_utils:utils", // code/release_4_0/rk3568/commonlibrary/c_utils/base/BUILD.gn    c++公共基础库
    "hdf_core:libhdf_utils", //hdf框架  ohos_shared_library("libhdf_utils")  code/release_4_0/rk3568/drivers/hdf_core/adapter/BUILD.gn c语言常用库
    "hdf_core:libhdf_platform", //驱动子系统平台框架
  ]

  cflags = [       //可以保持默认
    "-Wall",
    "-Wextra",
    "-Werror",
    "-Wno-format",
    "-Wno-format-extra-args",
  ]

  part_name = "A3_gpio"       //部件名称，须与bundle.json对应
  install_enable = true       
}
